kubecost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress
  namespace: kubecost
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-kubecost
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kubecost'
spec:
  #ingressClassName: nginx
  tls:
  - hosts:
    - kubecost.ranjithkaipra.in
    secretName: kubecost-ranjithkaipra-in-tls
  rules:
  - host: kubecost.ranjithkaipra.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
